# kodabi-lightrag-mcp

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  rag_config.json
.github/workflows/: rust.yml
docs/project/mvps/: MVP001.md
project/mvps/: INDEX.md  MVP001-Spec.md  MVP001.md
project/requirements/: INDEX.md  REQ202511272348.md
src/: lib.rs  main.rs
src/errors/: external_error.rs  handler_error.rs  mod.rs  service_error.rs
src/handlers/: config_handler.rs  mcp_handler.rs  mod.rs  query_handler.rs
src/lib/: rag_service.rs
src/models/: central_query.rs  mod.rs  query.rs  rag_config.rs  rag_mcp.rs
src/services/: mcp_service.rs  mod.rs  query_service.rs  rag_service.rs
src/traits/: config_api.rs  mod.rs  query_api.rs  service_api.rs
tests/: test_query.json
tests/manual/: README.md  test_mcp.json  test_query.json
