[package]
name = "kodabi_lightrag_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
axum = { version = "0.8", features = ["json", "macros"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["json"]}
dotenv = "0.15.0"
tempfile = "3.0"
serde_json = "1.0.145"
async-trait = "0.1"
rmcp = { version = "0.10.0", features = ["server"] }

[dev-dependencies]
temp-env = "0.3.6"
